# rAPId

./: .gitignore  =1.0.2  README.md  modal_app.py  pyproject.toml  setup.sh
secagent/: __init__.py  active.py  cli.py  ingest.py  normalize.py  store.py
secagent/discover/: __init__.py  graphql.py  node.py  openapi.py  python.py
secagent/llm/: __init__.py  ollama.py
secagent/reporting/: __init__.py  renderer.py
secagent/reporting/templates/: report.html.j2  report.md.j2
secagent/tests/: __init__.py  auth_missing.py  bola.py  jwt_manip.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
